[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/fishda/GEMMA.png" type="Texture" id=1]
[ext_resource path="res://scripts/Fishda.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 860.58

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "AttemptEat",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Normal",
"speed": 5.0
} ]

[node name="Fishda" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )
BOSS_BITE_COOLDOWN_TIME = 3.0

[node name="Sprite" type="Sprite" parent="."]

[node name="Sprite2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -192, 92 )
rotation = -1.52927
scale = Vector2( 0.779, 1 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DamageCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Normal"

[node name="BossBiteCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="SlowDownTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
